--- a/Internship Report/main.tex
+++ b/Internship Report/main.tex
@@ -5,6 +5,7 @@
 \usepackage{textcomp}
 \usepackage{graphicx} 
 \usepackage{listings}
+\usepackage{xcolor}
 \usepackage{amsmath,amssymb}  
 \usepackage{bm}  
 \usepackage[pdftex,bookmarks,colorlinks,breaklinks]{hyperref}  
@@ -12,6 +13,60 @@
 \usepackage{memhfixc} 
 \usepackage{pdfsync}  
 \usepackage{fancyhdr}
+\lstdefinestyle{pythonStyle}{
+    language=Python,
+    basicstyle=\ttfamily\small,
+    keywordstyle=\color{blue},
+    commentstyle=\color{gray},
+    stringstyle=\color{green!70!black},
+    backgroundcolor=\color{codebackground},
+    frame=single,
+    framesep=2pt,
+    framerule=0pt,
+    rulecolor=\color{codebackground},
+    showstringspaces=false
+}
+
+\lstdefinestyle{cliStyle}{
+    language=bash,
+    basicstyle=\ttfamily\small,
+    keywordstyle=\color{blue},
+    commentstyle=\color{gray},
+    stringstyle=\color{green!70!black},
+    backgroundcolor=\color{codebackground},
+    frame=single,
+    framesep=2pt,
+    framerule=0pt,
+    rulecolor=\color{codebackground},
+    showstringspaces=false
+}
+
+\lstdefinestyle{ubuntutermStyle}{
+    language=bash,
+    basicstyle=\ttfamily\small,
+    keywordstyle=\color{blue},
+    commentstyle=\color{gray},
+    stringstyle=\color{green!70!black},
+    backgroundcolor=\color{codebackground},
+    frame=single,
+    framesep=2pt,
+    framerule=0pt,
+    rulecolor=\color{codebackground},
+    showstringspaces=false
+}
+
+\lstdefinestyle{xmlStyle}{
+    language=XML,
+    basicstyle=\ttfamily\small,
+    keywordstyle=\color{blue},
+    identifierstyle=\color{black},
+    commentstyle=\color{green},
+    stringstyle=\color{red},
+    showstringspaces=false,
+    morekeywords={xmlns,version,type}
+}
+\definecolor{codebackground}{RGB}{240,240,240}
+
 \pagestyle{fancy}
 \title{Report}
 \author{Nabil ECH-CHOKHMANY}
@@ -22,12 +77,13 @@
 \maketitle
 
 \tableofcontents
-
+\include{Abstract}
 \include{Introduction}
 \include{Background}
 \include{Overview}
 \include{Implementation}
 \include{Configuring Networks with NETCONF}
+\include{Conclusion}
 
 \bibliographystyle{abbrv}
 %\bibliography{references}  % need to put bibtex references in references.bib 
