--- a/Internship Report/main.tex
+++ b/Internship Report/main.tex
@@ -4,6 +4,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{textcomp}
 \usepackage{graphicx} 
+\usepackage{caption}
 \usepackage{listings}
 \usepackage{xcolor}
 \usepackage{amsmath,amssymb}  
@@ -77,6 +78,8 @@
 \maketitle
 
 \tableofcontents
+\listoffigures
+\lstlistoflistings
 \include{Abstract}
 \include{Introduction}
 \include{Background}
