--- a/Internship Report/main.tex
+++ b/Internship Report/main.tex
@@ -1,7 +1,20 @@
-\documentclass[a4paper, 12pt]{report}
-
+\documentclass[a4paper, 11pt]{report}
+%\setlength{\headheight}{13.59999pt}
 \usepackage{settings}
 
+
+\usepackage[top=3cm, bottom=3cm, left=2cm, right=2cm]{geometry}
+\usepackage[utf8]{inputenc}
+\usepackage{textcomp}
+\usepackage{graphicx}
+\usepackage{amsmath, amssymb}
+\usepackage{bm}
+\usepackage[pdftex, bookmarks, colorlinks, breaklinks]{hyperref}
+\usepackage{memhfixc}
+\usepackage{pdfsync}
+\usepackage{fancyhdr}
+%\usepackage{natbib}
+    
 \title{Report}
 \author{Nabil ECH-CHOKHMANY}
 \date{}
